--- a/other-categories/croc/croc.html
+++ b/other-categories/croc/croc.html
@@ -178,7 +178,7 @@
 <h2 id="relay--uploading"><a class="header" href="#relay--uploading">relay &gt; uploading</a></h2>
 <p>relay &gt; uploading 是在上方那篇博客中提到的一个重要理念，<code>croc</code> 使用<strong>中继</strong>而不是上传的方式来进行文件传输。</p>
 <p>我在一开始使用 <code>croc send &lt;file&gt;</code> 时还曾思考（当时还没有看到 croc 使用 <code>relay</code>）为何这条命令并没有携带任何关于传输给<strong>谁</strong>的参数，例如：</p>
-<pre><code class="language-bash">\$ croc send cv_debug.log
+<pre><code class="language-bash">$ croc send cv_debug.log
 Sending 'cv_debug.log' (282 B)   
 Code is: 2151-school-biscuit-snow
 On the other computer run
