--- a/other-categories/archlinux/archlinux.html
+++ b/other-categories/archlinux/archlinux.html
@@ -412,7 +412,7 @@ Jun 23 17:18:33 tompc pacman[7079]: upgraded chromium (75.0.3770.90-3 -&gt; 75.0
 <h2 id="emoji-支持"><a class="header" href="#emoji-支持">emoji 支持</a></h2>
 <pre><code class="language-shell">#!/bin/sh
 set -e
-if [[ \$(id -u) -ne 0 ]] ; then echo &quot;请使用 root 用户执行本脚本&quot; ; exit 1 ; fi
+if [[ $(id -u) -ne 0 ]] ; then echo &quot;请使用 root 用户执行本脚本&quot; ; exit 1 ; fi
 echo &quot;开始设置 Noto Emoji font...&quot;
 # 1 - 安装  noto-fonts-emoji 包
 pacman -S noto-fonts-emoji --needed
