--- a/other-categories/minio/minio.html
+++ b/other-categories/minio/minio.html
@@ -256,9 +256,9 @@ events {
 
 
 stream {
-        #log_format basic '\$remote_addr [\$time_local] '
-        #         '\$protocol \$status \$bytes_sent \$bytes_received '
-        #         '\$session_time';
+        #log_format basic '$remote_addr [$time_local] '
+        #         '$protocol $status $bytes_sent $bytes_received '
+        #         '$session_time';
         #access_log /var/log/nginx/stream-access.log basic buffer=32k;
 
 
@@ -304,10 +304,10 @@ http {
         add_header Access-Control-Allow-Methods *;
 
          location / {
-               proxy_set_header X-Real-IP \$remote_addr;
-               proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-               proxy_set_header X-Forwarded-Proto \$scheme;
-               proxy_set_header Host \$http_host; # 主要是此处，保护 host header
+               proxy_set_header X-Real-IP $remote_addr;
+               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+               proxy_set_header X-Forwarded-Proto $scheme;
+               proxy_set_header Host $http_host; # 主要是此处，保护 host header
 
                proxy_connect_timeout 300;
                # 默认是 HTTP/1, keepalive 需要 HTTP/1.1
@@ -322,9 +322,9 @@ http {
 </code></pre>
 <h2 id="快速启动"><a class="header" href="#快速启动">快速启动</a></h2>
 <p>将 <code>docker-compose.yml</code> 与 <code>nginx.conf</code> 置于统一目录下，然后执行：</p>
-<pre><code class="language-bash">\$ docker compose up -d
+<pre><code class="language-bash">$ docker compose up -d
 # -or-
-\$ docker-compose up -d
+$ docker-compose up -d
 </code></pre>
 
                     <div id="giscus-container"></div>
