--- a/rust/mini-redis/framing.html
+++ b/rust/mini-redis/framing.html
@@ -186,8 +186,7 @@ enum Frame {
     Null,
     Array(Vec&lt;Frame&gt;),
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>注意 Frame 是如何包含没有任何语义的数据的， Command 解析和实现发生再更高级的层，而不在 Frame。</p>
 <p>对于 HTTP 来说，一个 frame 可能看起来像这样：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -208,8 +207,7 @@ enum Frame {
         chunk: Bytes,
     },
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>为了实现 Mini-Redis 的 frame，我们将会实现一个 <code>Connecton</code> 结构来包装一个 <code>TcpStream</code> 和 reads/writes <code>mini_redis::Frame</code> values。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -238,8 +236,7 @@ impl Connection {
         // implementation here
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>可以在<a href="https://redis.io/topics/protocol">这里</a> 找到 Redis wire protocal 的细节。完整的 <code>Connection</code> 代码在<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/connection.rs">这里</a> 。</p>
 <h2 id="buffered-reads-带缓冲地读"><a class="header" href="#buffered-reads-带缓冲地读">Buffered reads （带缓冲地读）</a></h2>
 <p><code>read_frame</code> 方法在返回前会等待一个完整的 frame 被接收。单个 <code>TcpStream::read()</code> 调用可能会返回一个任意数量的数据。这个数据可能是一个完整的 frame、一个不完整 frame 或者多个 frame。如果接收到了一个不完整的 frame，数据会被放入 buffer 并且会继续从 socket 读更多数据。如果接收到了多个 frame，第一个帧会被返回，剩下的数据会被放入 buffer 直到下次 <code>read_frame</code> 调用。</p>
@@ -264,8 +261,7 @@ impl Connection {
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>下面，我们实现 <code>read_frame()</code> 方法。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -302,8 +298,7 @@ pub async fn read_frame(&amp;mut self)
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>让我们来分析一下它。 <code>read_frame</code> 方法操作了一个 loop。首先，<code>self.parse_frame()</code> 被调用。它会尝试从 <code>self.buffer</code> 解析 redis frame。如果 <code>self.buffer</code> 里的数据足够解析出一个 frame，那么这个解析出来的 frame 会从 <code>read_frame()</code> 返回。如果数据不够解析成一个 frame，我们就尝试从 socket 读取更多数据到 buffer。在读取更多数据后循环会重新开始， <code>parse_frame()</code> 会被再次调用，如此往复。这次，如果接收到了足够的数据，解析可能就会成功了。 </p>
 <p>当从 stream 读取的时候，返回了一个 <code>0</code> 表示没有更多数据可以从对端接收了。如果这时候 read buffer 中还留有数据，这表示接收到的是个不完整的 frame 并且对端被意外中断了。这是一个错误条件，我们返回一个 <code>Err</code> 。</p>
 <h3 id="the-buf-trait"><a class="header" href="#the-buf-trait">The <code>Buf</code> trait</a></h3>
@@ -329,8 +324,7 @@ impl Connection {
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>然后是我们在 <code>Connection</code> 的 <code>read_frame()</code> 函数：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -367,8 +361,7 @@ pub async fn read_frame(&amp;mut self)
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>当使用字节数组和 <code>read</code> 时，我们也必须维护一个 cursor（用来定位当前有效数据的位置）来跟踪已经有多少数据被放入了 buffer 。我们必须确保传递 buffer 的空的部分（cursor 后面的那些位置）给 <code>read()</code>，否则会覆盖掉已经塞入 buffer 的数据。如果我们的 buffer 被填满了，我们还必须为 buffer 扩容来保证可以保持读取。在 <code>parse_frame()</code> （没包含在上面），我们需要解析 <code>self.buffer[..self.cursor]</code> 中包含的数据。</p>
 <p>因为将 byte array 和 cursor 配对是非常常见的，所以 <code>bytes</code> crate 提供了一个抽象来代表一个 byte array 和一个 cursor 。<code>Buf</code> trait 可以从能被 read 的数据实现。<code>Buf</code> trait 可以从能被 write 的数据实现。当传递一个 <code>T: BufMut</code> 给 <code>read_buf()</code> ，这个 buffer 内部的 cursor 会被 <code>read_buf</code> 自动更新。正因如此，我们这个版本的 <code>read_frame</code> 不需要管理自己的 cursor 。</p>
 <p>此外，当使用 <code>Vec&lt;u8&gt;</code> 的时候，buffer 必须被<strong>初始化</strong>。<code>vec![0;4096]</code> 这个宏申请了一个 4k 字节的数组并且往 Vector 中的每个条目写了 0 。这个初始化过程不是免费的。当使用 <code>BytesMut</code> 和 <code>BufMut</code> 的时候，容量是<strong>不需要</strong>初始化的（这个特性棒:D）。<code>BytesMut</code> 这个抽象会阻止我们从未初始化的内存中进行读，这使得我们避开了初始化的步骤。</p>
@@ -433,14 +426,13 @@ fn parse_frame(&amp;mut self)
         Err(e) =&gt; Err(e.into()),
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>完整的 <a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/frame.rs#L65-L103"><code>Frame::check</code></a> 函数可以在<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/frame.rs#L65-L103">这里</a>找到。我们的教程不会完全覆盖到它。</p>
 <p>需要注意的相关事项是 <code>Buf</code> 的 “byte iterator” 样式 API 被使用了。这些 API 被用来获取数据并推进内部的 cursor 。举个例子，为了操作一个 frame，首个字节被检查来决定这个 frame 的类型。这个被使用的函数是 <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html#method.get_u8"><code>Buf::get_u8</code></a> ，它会获取当前 cursor 的位置上的一个字节并且推 cursor 一个单位。</p>
 <p> <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html"><code>Buf</code></a> 还有很多更有用的方法。可以去 <a href="https://docs.rs/bytes/1/bytes/buf/trait.Buf.html">API docs</a> 看更多细节。</p>
 <h2 id="buffered-writes带缓冲地写"><a class="header" href="#buffered-writes带缓冲地写">Buffered writes（带缓冲地写）</a></h2>
 <p>framing 的另外一半 API 是 <code>write_frame(frame)</code> 函数。这个函数会把一个完整的 frame 写入到 socket 。为了最小化 <code>write</code> 系统调用的次数，写入操作都会被缓冲(buffered)。一个 write buffer 会被维护并且在往 socket 写入之前， frame 都会被 encode 到这个 buffer。然而，不同于 <code>read_frame()</code> ，在写入 socket 之前，并不总是会缓冲一整个 frame 。</p>
-<p>思考一下有一个批量 frame 的流 (a bulk stream frame)，被写入的值是 <code>Frame::Bulk(Bytes)</code> 。bulk frame 的报文格式是 frame 头是一个 <code>\$</code> 字符，然后跟着等同于数据字节数的长度，最后是数据本身。大部分 frame 都是 <code>Bytes</code> 的内容。如果数据很庞大，把它 copy 到一个中间缓冲区的开销会很大（这就是上一段末尾提到的）。</p>
+<p>思考一下有一个批量 frame 的流 (a bulk stream frame)，被写入的值是 <code>Frame::Bulk(Bytes)</code> 。bulk frame 的报文格式是 frame 头是一个 <code>$</code> 字符，然后跟着等同于数据字节数的长度，最后是数据本身。大部分 frame 都是 <code>Bytes</code> 的内容。如果数据很庞大，把它 copy 到一个中间缓冲区的开销会很大（这就是上一段末尾提到的）。</p>
 <p>为了实现带缓冲的写入操作，我们将会使用 <a href="https://docs.rs/tokio/1/tokio/io/struct.BufWriter.html"><code>BufWriter</code> struct</a> 。这个结构体使用 <code>T: AsyncWrite</code> 来初始化（<code>BufWriter::new(T)</code>，这个 T 得是 <code>AsyncWrite</code>），并且它本身也实现了 <code>AsyncWrite</code> 。当 <code>write</code> 在 <code>BufWriter</code> 上被调用，write 并不会直接作用到内部的 writer 上，而是作用到一个内部的 buffer 上。当这个 buffer 满了后，buffer 的内容会被刷到内部的 writer 上，同时清空这个 buffer 。我们还会有一些优化允许在某些情况下绕过缓冲区（上一段提到的情况）。</p>
 <p>我们不会尝试把 <code>write_frame()</code> 的完整实现作为教程的一部分。所以完整实现请看<a href="https://github.com/tokio-rs/mini-redis/blob/tutorial/src/connection.rs#L159-L184">这里</a>。</p>
 <p>首先， <code>Connection</code> 结构体需要改变成如下：</p>
@@ -463,8 +455,7 @@ impl Connection {
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>接下来会实现 <code>write_frame()</code>：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -507,8 +498,7 @@ async fn write_frame(&amp;mut self, frame: &amp;Frame)
 
     Ok(())
 }
-<span class="boring">}
-</span></code></pre></pre>
+<span class="boring">}</span></code></pre></pre>
 <p>下面这些被用到的函数都由 <a href="https://docs.rs/tokio/1/tokio/io/trait.AsyncWriteExt.html"><code>AsyncWriteExt</code></a> trait 提供。他们在 <code>TcpStream</code> 上也是可用的，但不建议在没有中间缓冲区的情况下发出单字节写入（一次就发一个字节，会导致太多的 syscall，太浪费资源了）。</p>
 <ul>
 <li><a href="https://docs.rs/tokio/1/tokio/io/trait.AsyncWriteExt.html#method.write_u8"><code>write_u8</code></a> 把单个字节写入 writer。</li>
